[gd_scene load_steps=13 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://init_tool/TerrainMesh.gd" type="Script" id=2]
[ext_resource path="res://init_tool/terrain.gdshader" type="Shader" id=3]
[ext_resource path="res://next.png" type="Texture" id=4]
[ext_resource path="res://init_tool/heightmap.gdshader" type="Shader" id=5]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 5 )
shader_param/warping_1 = 0.2
shader_param/warping_2 = 0.2
shader_param/x_shape = 0.4
shader_param/depth = 0.5
shader_param/min_range = 0.2
shader_param/max_range = 0.7
shader_param/root_offset = Vector2( 0, 0 )
shader_param/warp_offset_1 = Vector2( 0, 0.3 )
shader_param/warp_offset_2 = Vector2( 5.2, 1.3 )

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 3 )
shader_param/height_scale = 0.05

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 1, 1 )
subdivide_width = 1023
subdivide_depth = 1023
center_offset = Vector3( 0.5, 0, 0.5 )

[sub_resource type="PlaneMesh" id=6]

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
albedo_color = Color( 0.337255, 0.360784, 0.901961, 0.466667 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Spatial:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "rotate"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Spatial:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5, 5, 7.5, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 90, 0 ), Vector3( 0, 180, 0 ), Vector3( 0, 270, 0 ), Vector3( 0, 360, 0 ) ]
}

[node name="TerrainInitTool" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TextureViewportContainer" type="ViewportContainer" parent="."]
margin_right = 1024.0
margin_bottom = 1024.0

[node name="Viewport" type="Viewport" parent="TextureViewportContainer"]
size = Vector2( 1024, 1024 )
handle_input_locally = false
hdr = false
disable_3d = true
usage = 0
render_target_update_mode = 3
gui_disable_input = true

[node name="TextureRect" type="TextureRect" parent="TextureViewportContainer/Viewport"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
stretch_mode = 1

[node name="TerrainViewportContainer" type="ViewportContainer" parent="."]
margin_left = 1024.0
margin_right = 2048.0
margin_bottom = 1024.0

[node name="Viewport" type="Viewport" parent="TerrainViewportContainer"]
size = Vector2( 1024, 1024 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Spatial" type="Spatial" parent="TerrainViewportContainer/Viewport"]

[node name="Camera" type="Camera" parent="TerrainViewportContainer/Viewport/Spatial"]
transform = Transform( 1, 0, 0, 0, 0.9511, 0.308884, 0, -0.308884, 0.9511, 0, 1.1, 2 )

[node name="TerrainMesh" type="MeshInstance" parent="TerrainViewportContainer/Viewport"]
transform = Transform( 4, 0, 0, 0, 1, 0, 0, 0, 4, -2, 0, -2 )
material_override = SubResource( 3 )
mesh = SubResource( 1 )

[node name="SeaMesh" type="MeshInstance" parent="TerrainViewportContainer/Viewport"]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 2, 0, 0, 0 )
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="DirectionalLight" type="DirectionalLight" parent="TerrainViewportContainer/Viewport"]
transform = Transform( 0.707107, 1.28028e-08, -0.707107, 0.707107, -3.09086e-08, 0.707107, -1.28028e-08, -1, -3.09086e-08, 0, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="TerrainViewportContainer/Viewport"]
anims/RESET = SubResource( 4 )
anims/rotate = SubResource( 5 )

[node name="GridContainer" type="GridContainer" parent="."]
anchor_right = 0.2
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0
columns = 3

[node name="DebounceTimer" type="Timer" parent="GridContainer"]
wait_time = 0.1
one_shot = true

[node name="Label_Warping_1" type="Label" parent="GridContainer"]
margin_top = 1.0
margin_right = 92.0
margin_bottom = 15.0
text = "Warping 1"

[node name="Label_Warping_1_Value" type="Label" parent="GridContainer"]
margin_left = 96.0
margin_top = 1.0
margin_right = 124.0
margin_bottom = 15.0
text = "0.00"

[node name="HSlider_Warping_1" type="HSlider" parent="GridContainer"]
margin_left = 128.0
margin_right = 329.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.16
tick_count = 11
ticks_on_borders = true

[node name="Label_Warping_2" type="Label" parent="GridContainer"]
margin_top = 21.0
margin_right = 92.0
margin_bottom = 35.0
text = "Warping 2"

[node name="Label_Warping_2_Value" type="Label" parent="GridContainer"]
margin_left = 96.0
margin_top = 21.0
margin_right = 124.0
margin_bottom = 35.0
text = "0.00"

[node name="HSlider_Warping_2" type="HSlider" parent="GridContainer"]
margin_left = 128.0
margin_top = 20.0
margin_right = 329.0
margin_bottom = 36.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.04
tick_count = 11
ticks_on_borders = true

[node name="Label_XShape" type="Label" parent="GridContainer"]
margin_top = 41.0
margin_right = 92.0
margin_bottom = 55.0
text = "X Shape"

[node name="Label_XShape_Value" type="Label" parent="GridContainer"]
margin_left = 96.0
margin_top = 41.0
margin_right = 124.0
margin_bottom = 55.0
text = "0.00"

[node name="HSlider_XShape" type="HSlider" parent="GridContainer"]
margin_left = 128.0
margin_top = 40.0
margin_right = 329.0
margin_bottom = 56.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.4
tick_count = 11
ticks_on_borders = true

[node name="Label_Depth" type="Label" parent="GridContainer"]
margin_top = 61.0
margin_right = 92.0
margin_bottom = 75.0
text = "Depth"

[node name="Label_Depth_Value" type="Label" parent="GridContainer"]
margin_left = 96.0
margin_top = 61.0
margin_right = 124.0
margin_bottom = 75.0
text = "0.00"

[node name="HSlider_Depth" type="HSlider" parent="GridContainer"]
margin_left = 128.0
margin_top = 60.0
margin_right = 329.0
margin_bottom = 76.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.57
tick_count = 11
ticks_on_borders = true

[node name="Label_Min_Range" type="Label" parent="GridContainer"]
margin_top = 81.0
margin_right = 92.0
margin_bottom = 95.0
text = "Min Range"

[node name="Label_Min_Range_Value" type="Label" parent="GridContainer"]
margin_left = 96.0
margin_top = 81.0
margin_right = 124.0
margin_bottom = 95.0
text = "0.00"

[node name="HSlider_Min_Range" type="HSlider" parent="GridContainer"]
margin_left = 128.0
margin_top = 80.0
margin_right = 329.0
margin_bottom = 96.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.16
tick_count = 11
ticks_on_borders = true

[node name="Label_Max_Range" type="Label" parent="GridContainer"]
margin_top = 101.0
margin_right = 92.0
margin_bottom = 115.0
text = "Max Range"

[node name="Label_Max_Range_Value" type="Label" parent="GridContainer"]
margin_left = 96.0
margin_top = 101.0
margin_right = 124.0
margin_bottom = 115.0
text = "0.00"

[node name="HSlider_Max_Range" type="HSlider" parent="GridContainer"]
margin_left = 128.0
margin_top = 100.0
margin_right = 329.0
margin_bottom = 116.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.59
tick_count = 11
ticks_on_borders = true

[node name="Label_RootOffset" type="Label" parent="GridContainer"]
margin_top = 120.0
margin_right = 92.0
margin_bottom = 134.0
text = "Root Offset:"

[node name="Label_RootOffset_Spacer" type="Label" parent="GridContainer"]
margin_left = 96.0
margin_top = 120.0
margin_right = 124.0
margin_bottom = 134.0

[node name="Label_RootOffset_Spacer2" type="Label" parent="GridContainer"]
margin_left = 128.0
margin_top = 120.0
margin_right = 329.0
margin_bottom = 134.0

[node name="Label_RootOffset_X" type="Label" parent="GridContainer"]
margin_top = 139.0
margin_right = 92.0
margin_bottom = 153.0
text = "   X"

[node name="Label_RootOffset_X_Value" type="Label" parent="GridContainer"]
margin_left = 96.0
margin_top = 139.0
margin_right = 124.0
margin_bottom = 153.0
text = "0.00"

[node name="HSlider_RootOffset_X" type="HSlider" parent="GridContainer"]
margin_left = 128.0
margin_top = 138.0
margin_right = 329.0
margin_bottom = 154.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.64
tick_count = 11
ticks_on_borders = true

[node name="Label_RootOffset_Y" type="Label" parent="GridContainer"]
margin_top = 159.0
margin_right = 92.0
margin_bottom = 173.0
text = "   Y"

[node name="Label_RootOffset_Y_Value" type="Label" parent="GridContainer"]
margin_left = 96.0
margin_top = 159.0
margin_right = 124.0
margin_bottom = 173.0
text = "0.00"

[node name="HSlider_RootOffset_Y" type="HSlider" parent="GridContainer"]
margin_left = 128.0
margin_top = 158.0
margin_right = 329.0
margin_bottom = 174.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.67
tick_count = 11
ticks_on_borders = true

[node name="Label_WarpOffset_1" type="Label" parent="GridContainer"]
margin_top = 178.0
margin_right = 92.0
margin_bottom = 192.0
text = "Warp Offset 1:"

[node name="Label_WarpOffset_Spacer_1" type="Label" parent="GridContainer"]
margin_left = 96.0
margin_top = 178.0
margin_right = 124.0
margin_bottom = 192.0

[node name="Label_WarpOffset_Spacer_1_b" type="Label" parent="GridContainer"]
margin_left = 128.0
margin_top = 178.0
margin_right = 329.0
margin_bottom = 192.0

[node name="Label_WarpOffset_X_1" type="Label" parent="GridContainer"]
margin_top = 197.0
margin_right = 92.0
margin_bottom = 211.0
text = "   X"

[node name="Label_WarpOffset_X_1_Value" type="Label" parent="GridContainer"]
margin_left = 96.0
margin_top = 197.0
margin_right = 124.0
margin_bottom = 211.0
text = "0.00"

[node name="HSlider_WarpOffset_X_1" type="HSlider" parent="GridContainer"]
margin_left = 128.0
margin_top = 196.0
margin_right = 329.0
margin_bottom = 212.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.11
tick_count = 11
ticks_on_borders = true

[node name="Label_WarpOffset_Y_1" type="Label" parent="GridContainer"]
margin_top = 217.0
margin_right = 92.0
margin_bottom = 231.0
text = "   Y"

[node name="Label_WarpOffset_Y_1_Value" type="Label" parent="GridContainer"]
margin_left = 96.0
margin_top = 217.0
margin_right = 124.0
margin_bottom = 231.0
text = "0.00"

[node name="HSlider_WarpOffset_Y_1" type="HSlider" parent="GridContainer"]
margin_left = 128.0
margin_top = 216.0
margin_right = 329.0
margin_bottom = 232.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.3
tick_count = 11
ticks_on_borders = true

[node name="Label_WarpOffset_2" type="Label" parent="GridContainer"]
margin_top = 236.0
margin_right = 92.0
margin_bottom = 250.0
text = "Warp Offset 1:"

[node name="Label_WarpOffset_Spacer_2" type="Label" parent="GridContainer"]
margin_left = 96.0
margin_top = 236.0
margin_right = 124.0
margin_bottom = 250.0

[node name="Label_WarpOffset_Spacer_2_b" type="Label" parent="GridContainer"]
margin_left = 128.0
margin_top = 236.0
margin_right = 329.0
margin_bottom = 250.0

[node name="Label_WarpOffset_X_2" type="Label" parent="GridContainer"]
margin_top = 255.0
margin_right = 92.0
margin_bottom = 269.0
text = "   X"

[node name="Label_WarpOffset_X_2_Value" type="Label" parent="GridContainer"]
margin_left = 96.0
margin_top = 255.0
margin_right = 124.0
margin_bottom = 269.0
text = "0.00"

[node name="HSlider_WarpOffset_X_2" type="HSlider" parent="GridContainer"]
margin_left = 128.0
margin_top = 254.0
margin_right = 329.0
margin_bottom = 270.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.3
tick_count = 11
ticks_on_borders = true

[node name="Label_WarpOffset_Y_2" type="Label" parent="GridContainer"]
margin_top = 275.0
margin_right = 92.0
margin_bottom = 289.0
text = "   Y"

[node name="Label_WarpOffset_Y_2_Value" type="Label" parent="GridContainer"]
margin_left = 96.0
margin_top = 275.0
margin_right = 124.0
margin_bottom = 289.0
text = "0.00"

[node name="HSlider_WarpOffset_Y_2" type="HSlider" parent="GridContainer"]
margin_left = 128.0
margin_top = 274.0
margin_right = 329.0
margin_bottom = 290.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.52
tick_count = 11
ticks_on_borders = true

[node name="Label_TerrainScale" type="Label" parent="GridContainer"]
margin_top = 295.0
margin_right = 92.0
margin_bottom = 309.0
text = "Terrain Scale"

[node name="Label_TerrainScale_Value" type="Label" parent="GridContainer"]
margin_left = 96.0
margin_top = 295.0
margin_right = 124.0
margin_bottom = 309.0
text = "0.00"

[node name="HSlider_TerrainScale" type="HSlider" parent="GridContainer"]
margin_left = 128.0
margin_top = 294.0
margin_right = 329.0
margin_bottom = 310.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.24
tick_count = 11
ticks_on_borders = true

[node name="Label_Sealevel" type="Label" parent="GridContainer"]
margin_top = 315.0
margin_right = 92.0
margin_bottom = 329.0
text = "Sealevel"

[node name="Label_Sealevel_Value" type="Label" parent="GridContainer"]
margin_left = 96.0
margin_top = 315.0
margin_right = 124.0
margin_bottom = 329.0
text = "0.00"

[node name="HSlider_Sealevel" type="HSlider" parent="GridContainer"]
margin_left = 128.0
margin_top = 314.0
margin_right = 329.0
margin_bottom = 330.0
size_flags_horizontal = 3
min_value = 0.01
max_value = 1.0
step = 0.01
value = 0.01
tick_count = 11
ticks_on_borders = true

[node name="Label_Button_Spacer_1" type="Label" parent="GridContainer"]
margin_top = 346.0
margin_right = 92.0
margin_bottom = 360.0

[node name="Label_Button_Spacer_2" type="Label" parent="GridContainer"]
margin_left = 96.0
margin_top = 346.0
margin_right = 124.0
margin_bottom = 360.0

[node name="Button" type="Button" parent="GridContainer"]
margin_left = 128.0
margin_top = 334.0
margin_right = 329.0
margin_bottom = 372.0
text = "Next Stage"
icon = ExtResource( 4 )
icon_align = 2

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 130.0
window_title = "Save heightmap"
resizable = true
access = 1

[connection signal="value_changed" from="GridContainer/HSlider_Warping_1" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="GridContainer/HSlider_Warping_2" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="GridContainer/HSlider_XShape" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="GridContainer/HSlider_Depth" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="GridContainer/HSlider_Min_Range" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="GridContainer/HSlider_Max_Range" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="GridContainer/HSlider_RootOffset_X" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="GridContainer/HSlider_RootOffset_Y" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="GridContainer/HSlider_WarpOffset_X_1" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="GridContainer/HSlider_WarpOffset_Y_1" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="GridContainer/HSlider_WarpOffset_X_2" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="GridContainer/HSlider_WarpOffset_Y_2" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="GridContainer/HSlider_TerrainScale" to="." method="_on_HSlider_terrain_value_changed"]
[connection signal="value_changed" from="GridContainer/HSlider_Sealevel" to="." method="_on_HSlider_sea_changed"]
[connection signal="pressed" from="GridContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
